--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
-
-html, body, :global(#root) {
-  height: 100%;
+html,
+body,
+ :global(#root) {
+    height: 100%;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    box-sizing: border-box;
+}
