--- a/src/views/home/index.scss
+++ b/src/views/home/index.scss
@@ -1,6 +1,7 @@
 @media screen and (min-width:375.3px) and (max-width:1536px) {
     .homePage {
         width: 100%;
+        position: relative;
     }
     .homePage .navbox {
         width: 100%;
@@ -212,14 +213,78 @@
     }
     .jurpBox {
         width: 100%;
-        height: 110px;
+        height: 70px;
         padding-left: 20px;
         padding-right: 20px;
+        margin-top: 15px;
+        margin-bottom: 20px;
     }
     .jurpBox .contentText {
-        background: #aaa;
+        background: #F2F1F1;
         width: 100%;
         height: 100%;
+        display: flex;
+    }
+    .contentText .contentLeft {
+        flex: 1;
+        display: flex;
+        align-items: center;
+    }
+    .contentLeft span {
+        display: inline-block;
+        height: 35px;
+        text-align: center;
+        line-height: 35px;
+        border: 1px solid rgba(187, 187, 187, 1);
+        background: #fff;
+        font-size: 14px;
+        border-radius: 4px;
+    }
+    .contentLeft span:nth-child(1) {
+        margin-left: 62px;
+        width: 109px;
+    }
+    .contentLeft span:nth-child(2) {
+        margin-left: 17px;
+        width: 160px;
+    }
+    .contentText .contentRight {
+        flex: 1;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    .contentRight span {
+        width: 214px;
+        height: 35px;
+        text-align: center;
+        line-height: 35px;
+        border: 1px solid rgba(187, 187, 187, 1);
+        background: #fff;
+        font-size: 14px;
+        border-radius: 4px;
+        float: right;
+        margin-right: 20px;
+    }
+    .homePage .delog {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, .5);
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .delog .delogContent {
+        width: 482px;
+        height: 352px;
+        background: #fff;
+        border-radius: 4px;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin-top: -176px;
+        margin-left: -241px;
     }
 }
 
