--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -18,9 +18,23 @@
 }
 
 @media screen and (max-width:375.2px) {
+    html {
+        font-size: calc(100/375*100vw)
+    }
     .header {
         width: 100%;
-        // height: 50rem;
-        // background: blue;
+        height: 1rem;
+        color: rgb(255, 255, 255);
+        background-color: rgb(0, 118, 255);
+        font-size: 0.2rem;
+        border-width: 1px;
+        border-style: solid;
+        text-align: center;
+        line-height: 100px;
+        font-weight: normal;
+        font-style: normal;
+    }
+    .header p {
+        width: 100%;
     }
 }
