--- a/src/views/login/index.css
+++ b/src/views/login/index.css
@@ -1,85 +1,102 @@
-*{
-  margin:0;
-  padding:0;
-  list-style: none;;
+* {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    ;
 }
-body,html{
-  width:100%;
-  height:100%;
+
+body,
+html {
+    width: 100%;
+    height: 100%;
 }
-#root{
-  width:100%;
-  height:100%;
+
+#root {
+    width: 100%;
+    height: 100%;
 }
-.loginbigbox{
-  width:100%;
-  height:100%;
- 
+
+.loginbigbox {
+    width: 100%;
+    height: 100%;
+    font-size: 14px;
 }
-.title{
-  text-align: center;
-  line-height:50px;
+
+.title {
+    text-align: center;
+    line-height: 50px;
 }
-.cheackin{
-margin:0 auto;
-  width:200px;
-  height:50px;
-  display:flex;
+
+.cheackin {
+    margin: 0 auto;
+    width: 200px;
+    height: 50px;
+    display: flex;
 }
-.cheackin span{
-  flex:1;
-  text-align:center;
-  border-bottom:solid 1px #ccc;
-  line-height:50px;
+
+.cheackin span {
+    flex: 1;
+    text-align: center;
+    border-bottom: solid 1px #ccc;
+    line-height: 50px;
 }
-.cheackin .active{
-  color:red;
-  border-color:red;
+
+.cheackin .active {
+    color: red;
+    border-color: red;
 }
-.user{
-   width:200px;
-   height:40px;
-   margin:10px auto;
-   
-   border:solid 1px #ccc;
+
+.user {
+    width: 200px;
+    height: 40px;
+    margin: 10px auto;
+    border: solid 1px #ccc;
 }
-.user>input,.pwd>input{
-  border:none;
-  width:180px;
-  height:38px;
-  line-height:40px;
-  outline:0;
-  padding-left:20px;
+
+.user>input,
+.pwd>input {
+    border: none;
+    width: 180px;
+    height: 38px;
+    line-height: 40px;
+    outline: 0;
+    padding-left: 20px;
 }
-.pwd{
-  width:200px;
-  height:40px;
-  margin:10px auto;
-  border:solid 1px #ccc;
+
+.pwd {
+    width: 200px;
+    height: 40px;
+    margin: 10px auto;
+    border: solid 1px #ccc;
 }
-.login{
-  width:200px;
-  height:40px;
-  margin:10px auto;
- background:skyblue;
- text-align:center;
- line-height:40px;
+
+.login {
+    width: 200px;
+    height: 40px;
+    margin: 10px auto;
+    background: skyblue;
+    text-align: center;
+    line-height: 40px;
 }
-.check{
-  width:200px;
-  margin:10px auto;
+
+.check {
+    width: 200px;
+    margin: 10px auto;
 }
-.check>input{
-  margin-right:10px;
+
+.check>input {
+    margin-right: 10px;
 }
-.pwdalt{
-  width:300px;
-  text-align:center;
-  font-size:12px;
-  line-height:20px;
-  color:red;
+
+.pwdalt {
+    width: 300px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 20px;
+    color: red;
 }
-.none{
-  width:0;
-height:0;
+
+.none {
+    width: 0;
+    height: 0;
 }
