--- a/src/views/dean/index.css
+++ b/src/views/dean/index.css
@@ -13,13 +13,17 @@
     height: 100%;
     border: 1px solid #ccc;
     display: flex;
+    flex-direction: column;
   }
   .listClass .classLeft {
-    flex: 8;
+    flex: 7;
     display: flex;
+    flex-wrap: wrap;
+    padding-top: 20px;
   }
   .classLeft .leftText {
-    padding: 50px 40px;
+    padding-left: 30px;
+    padding-right: 30px;
     display: flex;
   }
   .leftText > span {
@@ -29,17 +33,13 @@
     width: 70px;
     height: 26px;
     text-align: center;
-    line-height: 26px;
   }
   .classLeft .leftList {
     flex: 1;
-  }
-  .leftList .leftContent {
-    width: 100%;
-    height: 100%;
+    margin-right: 30px;
     display: flex;
   }
-  .leftContent > span {
+  .leftList > span {
     width: 103px;
     height: 50px;
     background-color: #e6f1fc;
@@ -51,33 +51,40 @@
     line-height: 50px;
     margin-left: 15px;
     margin-right: 15px;
-    position: relative;
-    top: 50%;
-    margin-top: -25px;
   }
   .leftContent span:nth-child(1) {
     background-color: #1890ff;
     border: 1px solid #1890ff;
     color: #fff;
   }
-  .leftContent span:last-child {
-    background-color: #fff;
-    color: #000;
-    border: 1px solid #ccc;
-  }
-  .leftContent .addClass {
-    float: left;
-  }
   .listClass .classRight {
-    flex: 2;
-    position: relative;
+    flex: 4;
+    display: flex;
   }
-  .classRight .grops {
-    top: 20px;
-    right: 20px;
+  .classRight .rightOrder {
+    flex: 6;
+    display: flex;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .rightOrder p:nth-child(1) {
+    font-size: 14px;
+    text-align: right;
+    display: inline-block;
+    width: 70px;
+    height: 26px;
+  }
+  .rightOrder p:nth-child(2) {
+    margin-left: 40px;
+  }
+  .classRight .rightXing {
+    flex: 4;
+  }
+  .rightXing .grops {
+    float: right;
+    margin-right: 15px;
     width: 160px;
     height: 34px;
-    position: absolute;
   }
   .grops .gropLength {
     width: 63px;
@@ -148,7 +155,7 @@
     height: 34px;
     font-size: 14px;
     text-align: left;
-    line-height: 34px;
+    line-height: 30px;
     font-weight: normal;
     font-style: normal;
     opacity: 1;
@@ -229,51 +236,34 @@
     display: flex;
   }
   .contentText .contentLeft {
-    flex: 1;
+    width: 180px;
     display: flex;
     align-items: center;
+    flex-direction: column;
   }
   .contentLeft > span {
+    flex: 1;
     display: inline-block;
-    height: 35px;
+    width: 100%;
+    color: #3F51B5;
+    font-size: 13px;
     text-align: center;
-    line-height: 35px;
-    border: 1px solid #bbbbbb;
-    background: #fff;
-    font-size: 14px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  .contentLeft > span:nth-child(1) {
-    margin-left: 62px;
-    width: 109px;
-  }
-  .contentLeft > span:nth-child(2) {
-    margin-left: 17px;
-    margin-right: 20px;
-    width: 160px;
+    line-height: 23px;
   }
   .contentLeft > span:nth-child(3) {
-    width: 85px;
+    color: #000;
   }
   .contentText .contentRight {
     flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    padding-right: 20px;
   }
   .contentRight > span {
-    width: 214px;
-    height: 35px;
-    text-align: center;
-    line-height: 35px;
-    border: 1px solid #bbbbbb;
-    background: #fff;
-    font-size: 14px;
-    border-radius: 4px;
-    float: right;
-    margin-right: 20px;
-    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    background: #009688;
   }
 }
 
@@ -295,68 +285,83 @@
     height: 100%;
     border: 1px solid #ccc;
     display: flex;
+    flex-direction: column;
   }
   .listClass .classLeft {
     flex: 7;
     display: flex;
+    flex-wrap: wrap;
+    padding-top: 0.2rem;
   }
   .classLeft .leftText {
-    padding: 0.1rem 0.07rem;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
     display: flex;
   }
   .leftText > span {
-    font-size: 0.13rem;
+    font-size: 0.1rem;
+    text-align: right;
     display: inline-block;
+    width: 0.5rem;
+    height: 0.25rem;
+    text-align: center;
   }
   .classLeft .leftList {
-    padding: 0.1rem 0.07rem;
     flex: 1;
+    margin-right: 0.2rem;
     display: flex;
-    flex-wrap: wrap;
   }
-  .leftList .leftContent {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-  }
-  .leftContent > span {
-    width: 0.6rem;
-    height: 0.4rem;
+  .leftList > span {
+    width: 0.5rem;
+    height: 0.3rem;
     background-color: #e6f1fc;
     border: 1px solid #a3d0fd;
     color: #0076ff;
     border-radius: 0.04rem;
-    font-size: 0.14rem;
+    font-size: 0.1rem;
     text-align: center;
-    line-height: 0.4rem;
-    margin-left: 0.12rem;
-    margin-right: 0.12rem;
-    margin-bottom: 10px;
+    line-height: 0.3rem;
+    margin-left: 0.1rem;
+    margin-right: 0.1rem;
   }
-  .leftContent span:nth-child(1) {
+  .leftList span:nth-child(1) {
     background-color: #1890ff;
     border: 1px solid #1890ff;
     color: #fff;
   }
-  .leftContent span:last-child {
-    background-color: #fff;
-    color: #000;
-    width: 0.7rem;
-    border: 1px solid #ccc;
-  }
-  .leftContent .addClass {
-    float: left;
-  }
   .listClass .classRight {
+    flex: 4;
+    display: flex;
+  }
+  .classRight .rightOrder {
+    flex: 7;
+    display: flex;
+    padding-left: 0.2rem;
+    font-size: 0.1rem;
+  }
+  .rightOrder p {
+    line-height: 0.15rem;
+  }
+  .rightOrder p:nth-child(1) {
+    font-size: 0.1rem;
+    text-align: right;
+    display: inline-block;
+    width: 0.5rem;
+    height: 0.25rem;
+  }
+  .rightOrder p:nth-child(2) {
+    margin-left: 0.2rem;
+  }
+  .classRight .rightXing {
     flex: 3;
+    text-align: right;
     position: relative;
   }
-  .classRight .grops {
-    top: 0.2rem;
-    right: 0.1rem;
-    width: 0.65rem;
-    height: 0.6rem;
+  .rightXing .grops {
+    width: 1.6rem;
+    height: 0.25rem;
     position: absolute;
+    right: 0.1rem;
   }
   .grops .gropLength {
     width: 0.4rem;
@@ -446,7 +451,7 @@
     text-decoration: none;
   }
   .listClass .classRight {
-    flex: 2;
+    flex: 3;
   }
   .homePage .listNav {
     width: 100%;
@@ -515,51 +520,36 @@
     display: flex;
   }
   .contentText .contentLeft {
-    flex: 1;
+    width: 1rem;
     display: flex;
     align-items: center;
+    flex-direction: column;
   }
   .contentLeft > span {
+    flex: 1;
     display: inline-block;
-    height: 0.35rem;
-    text-align: center;
-    line-height: 0.35rem;
-    border: 1px solid #bbbbbb;
-    background: #fff;
+    width: 100%;
+    color: #3F51B5;
     font-size: 0.1rem;
-    border-radius: 0.04rem;
-    cursor: pointer;
-  }
-  .contentLeft > span:nth-child(1) {
-    margin-left: 0.07rem;
-    width: 0.6rem;
-  }
-  .contentLeft > span:nth-child(2) {
-    margin-left: 0.08rem;
-    margin-right: 0.08rem;
-    width: 1rem;
-    font-size: 0.08rem;
+    text-align: center;
+    line-height: 0.23rem;
   }
   .contentLeft > span:nth-child(3) {
-    width: 0.5rem;
+    color: #000;
   }
   .contentText .contentRight {
     flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
+    padding-right: 0.1rem;
   }
   .contentRight > span {
-    width: 1.2rem;
-    height: 0.35rem;
-    text-align: center;
-    line-height: 0.35rem;
-    border: 1px solid #bbbbbb;
-    background: #fff;
-    font-size: 0.08rem;
-    border-radius: 0.04rem;
-    float: right;
-    cursor: pointer;
-    margin-left: 0.07rem;
+    padding-left: 0.05rem;
+    padding-right: 0.05rem;
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    font-size: 0.1rem;
+    background: #009688;
   }
 }
